# MegaManX-proj

./: .gitignore  Build.sh  CMakeLists.txt  Clean.sh  LICENSE.md  Makefile  README.md
src/: .null-ls_919079_main.cpp  idk.cpp  learning.cpp  main.cpp  menu.cpp  menu.h  movement.cpp  sas.cpp
textures/: Sprite-0001.ase  Sprite-0002.ase  Sprite-0003.ase  Sprite-0004.ase
